envoy-config.yaml
listeners:
  # ingress
  - address: tcp://127.0.0.1:10001
    filters:
      - name: http_connection_manager
        config:
          codec_type: auto
          stat_prefix: grpc.test.ingress
          route_config:
            virtual_hosts:
              - name: local_test_server
                domains: ["*"]
                routes:
                - prefix: /
                  headers:
                  - name: content-type
                    value: application/grpc
                  cluster: local_test_server
          filters:
            - name: router
              config:
                dynamic_stats: true
          tracing:
            operation_name: ingress
          access_log:
          - path: ./envoy.ingress.log
            filter:
              type: not_healthcheck

# Administration interface
admin:
  access_log_path: /dev/null
  address: tcp://0.0.0.0:10013


# Cluster manager
cluster_manager:
  clusters:
  - name: local_test_server
    type: static
    connect_timeout_ms: 1000
    lb_type: round_robin
    features: http2
    hosts:
    - url: tcp://127.0.0.1:10000
